--- a/src/components/tree/_tree.scss
+++ b/src/components/tree/_tree.scss
@@ -30,6 +30,7 @@
 
     //Badge in the tree items
     .tree-badge {
+      border-width: 0;
       height: 18px;
       line-height: 18px;
       margin: -2px 4px 0 3px;
